# qt_datasets_checker

./: .gitignore  CMakeLists.txt  DataModel.cpp  DataModel.h  Dockerfile  MdiChild.cpp  MdiChild.h  README.md  authorization.cpp  authorization.h  authorization.ui  create_db_table.sql  docker-compose.yml  download.cpp  download.h  download.ui  kaggle.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registration.cpp  registration.h  registration.ui
